# ape_tag_libs

./: .gitignore  ApeTag.py  CHANGELOG  CNAME  MANIFEST.in  README  README.tests  apeinfo.1  apetag.3  apetag.c  apetag.erl  apetag.gemspec  apetag.h  apetag.hrl  apetag.lua  apetag.rb  apev2tag.py  buildrelease.bat  buildrelease.sh  check_tests  created.rid  fr_class_index.html  fr_file_index.html  fr_method_index.html  index.html  io_truncate.c  pylibape.py  setup.py  test_ApeTag.py  test_apetag.erl  test_apetag.lua
.github/workflows/: ci.yml
c/: .gitignore  CHANGELOG  LICENSE  MIT-LICENSE  Makefile  Makefile.am  README  apeinfo.1  apeinfo.c  apetag.3  apetag.c  apetag.h  configure.ac  libapetag.pc.in
c/m4/: .gitignore
c/test/: test_apetag.c  test_apetag_files.c
c/test/tags/: empty_ape.tag  empty_ape_id3.tag  example1_id3.tag  example2_id3.tag
classes/: ApeItem.html  ApeTag.html  ApeTagError.html
clojure/: LICENSE  MIT-LICENSE  README  apetag-spec-files.clj  apetag-spec.clj  apetag.clj
erlang/: Makefile  README  apetag.erl  apetag.hrl  test_apetag.erl  test_apetag_files.erl
files/: apetag_rb.html
forth/: ape_parse.fs
haskell/: ApeTag.hs  MIT-LICENSE  README  TestApeTag.hs
io/: MIT-LICENSE  README  apetag.io  apetag_test.io
lua/: MIT-LICENSE  Makefile  README  apetag.lua  io_truncate.c  test_apetag.lua  test_apetag_files.lua  test_shared.lua
perl/: MANIFEST  MIT-LICENSE  Makefile.PL  README
perl/lib/: ApeTag.pm
perl/lib/ApeTag/: ApeItem.pm
perl/t/: corrupt.t  id3.t  parsing.t  removing.t  test-files  updating.t
python/: ApeTag.py  MANIFEST.in  MIT-LICENSE  README  buildrelease.sh  setup.py  test_ApeTag.py  test_ApeTag_files.py
ruby/: .ci.gemfile  MIT-LICENSE  Rakefile  apetag.gemspec  apetag.rb
ruby/test/: latin1.values  test_apetag.rb  utf-16be.values  utf-8.values
test/: test_apetag.c  test_apetag.rb
test-files/: corrupt-count-larger-than-possible.tag  corrupt-count-mismatch.tag  corrupt-count-over-max-allowed.tag  corrupt-data-remaining.tag  corrupt-duplicate-item-key.tag  corrupt-finished-without-parsing-all-items.tag  corrupt-footer-flags.tag  corrupt-header.tag  corrupt-item-flags-invalid.tag  corrupt-item-length-invalid.tag  corrupt-key-invalid.tag  corrupt-key-too-long.tag  corrupt-key-too-short.tag  corrupt-min-size.tag  corrupt-missing-key-value-separator.tag  corrupt-next-start-too-large.tag  corrupt-size-larger-than-possible.tag  corrupt-size-mismatch.tag  corrupt-size-over-max-allowed.tag  corrupt-size-over-max-size.tag  corrupt-value-not-utf8.tag  corrupt.txt  corrupt2.txt  corrupt3.txt  corrupt4.txt  corrupt5.txt  good-binary-non-utf8-value.tag  good-many-items.tag  good-multiple-values.tag  good-simple-1-ro-external.tag  good-simple-1-uc.tag  good-simple-1-utf8.tag  good-simple-1.tag  good-simple-2.tag  good-simple-3.tag  good-simple-4-bad-date.tag  good-simple-4-date.tag  good-simple-4-long.tag  good-simple-4-uc.tag  good-simple-4.tag  (+4 more)
test/tags/: example1.tag  example2.tag
tests/: create.py  delete.py  getfields.py  getrawtag.py  replace.py  speedtest.py  test.py  update.py  walktree.py
